essaimDetail.html js mis dans essaimDetail.js

--- a/src/main/resources/templates/essaim/essaimDetail.html
+++ b/src/main/resources/templates/essaim/essaimDetail.html
@@ -1,101 +1,26 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
+<script th:src="@{/js/ruches/essaimDetail.js}"></script>
 <script th:inline="javascript">
-$(document).ready(function() {
 	const _csrf_token = [[${_csrf.token}]];
-    const _csrf_param_name = [[${_csrf.parameterName}]];
-	let essaimnoms = [[${essaimnoms}]];
-	let ruchesvidesnoms = [[${ruchesvidesnoms}]];
-	$('.confirmation').on('click', function () {
-		if([[${recolteHausses}]]) {
-			alert([[#{essaimsupprimerecolte}]]);
-			return false;
-		} else if ([[${evenements}]]) {
-	        return confirm([[#{supprimeressaimevenements}]]);			
-		} else {
-			return confirm([[#{supprimeressaim}]]);
-		}
-    });
-	$( "#clone" ).click(function() {
-		/*[- Saisie des couples nomEssaim;nomRuche séparés par une "," -]*/
-		const noms = prompt([[#{nomessaimsvirgule}]]);
-		if (noms == null || noms == "") {
-		    return;
-		}
-		const tabNomExiste=[];
-		const tabNomOk=[];
-		const tabNomRucheOk=[];
-		const tabNomRucheIncorrect=[];
-		const nomsarr = noms.split(',');
-		for (const item of nomsarr) {
-			const arr = item.split(';');
-			/*[- ne nom de l'essaim -]*/
-			const ne = arr[0].trim();
-			let nr = "";
-			/*[- nr nom de la ruche -]*/
-			if (arr.length > 1) {
-				nr = arr[1].trim();
-			}		
-			if ($.inArray(ne, essaimnoms) != -1) {
-				/*[- l'essaim ne existe déjà -]*/
-				tabNomExiste.push(ne);
-				if ((nr != "") && ($.inArray(nr, ruchesvidesnoms) == -1)) {
-					/*[- ruche nr incorrecte -]*/
-					tabNomRucheIncorrect.push(nr);
-				}
-			} else {
-				/*[- on crée l'essaim ne -]*/
-				tabNomOk.push(ne);
-				/*[- ce nom ne doit pas être réutilisé -]*/
-				essaimnoms.push(ne);
-				if (nr == "") {
-					/*[- pas de ruche -]*/
-					tabNomRucheOk.push("");
-				} else if ($.inArray(nr, ruchesvidesnoms) == -1) {
-					/*[- ruche nr incorrecte -]*/
-					tabNomRucheOk.push("");
-					tabNomRucheIncorrect.push(nr);
-				} else {
-					/*[- on met l'essaim ne dans la ruche nr -]*/
-					tabNomRucheOk.push(nr);
-					/*[- ce nom ne doit pas être réutilisé, on l'enlève de la
-						liste des ruches vides -]*/
-					const index = ruchesvidesnoms.indexOf(nr);
-					if (index > -1) {
-						ruchesvidesnoms.splice(index, 1);
-					}
-				}
-			}
-		}
-		let prompterreur = "";
-		if (tabNomRucheIncorrect.length > 0) {
-			prompterreur = [[#{Ruches}]] + ' : ' + tabNomRucheIncorrect.join(',') + ' ' + [[#{nexistentPasOuPasVides}]];
-		}
-		if (tabNomExiste.length > 0) {
-			if (prompterreur != "") { prompterreur += '\n'; }		
-			prompterreur += [[#{Essaims}]] + ' : ' + tabNomExiste.join(',') + ' ' + [[#{nomexistentdeja}]];
-			if (tabNomOk.length == 0) {
-				alert(prompterreur);
-				return false;					
-			}
-			if (!confirm(prompterreur + '. ' + [[#{creer}]] + ' ' + tabNomOk.join(',') + ' ?')) {
-				return false;
-			}
-		} else if (tabNomRucheIncorrect.length > 0) {
-			if (!confirm(prompterreur + '. ' + [[#{creer}]] + ' ' + tabNomOk.join(',') + ' ?')) {
-				return false;
-			}
-		}
-	    let requestData = {nomclones : tabNomOk.join(','), nomruches : tabNomRucheOk.join(',')};
-	    requestData[_csrf_param_name] = _csrf_token;
-		$.post( [[@{/essaim/clone/}]] + [[${essaim.id}]],
-				requestData).done(function (data) { 
-					alert( data );
-					document.location.reload(true);
-		});
-	});
-});
+	const _csrf_param_name = [[${_csrf.parameterName}]];
+	const essaimnoms = [[${essaimnoms}]];
+	const ruchesvidesnoms = [[${ruchesvidesnoms}]];
+	const recolteHausses = [[${recolteHausses}]];
+	const essaimsupprecolttxt =[[#{essaimsupprimerecolte}]];
+	const suppessaimevetxt = [[#{supprimeressaimevenements}]];
+	const suppessaimtxt = [[#{supprimeressaim}]];
+	const evenements = [[${evenements}]];
+	const nomessaimsvirgule = [[#{nomessaimsvirgule}]];
+	const nexistPasOuPasVidtxt = [[#{nexistentPasOuPasVides}]];
+	const nomexistdejatxt = [[#{nomexistentdeja}]];
+	const Ruchestxt = [[#{Ruches}]];
+	const Essaimstxt = [[#{Essaims}]];
+	const creertxt = [[#{creer}]];
+	const urlessaimclone = [[@{/essaim/clone/}]];
+	const essaimid = [[${essaim.id}]];
+	$(document).ready(essaimDetail);
 </script>
 </head>
 <body>
