parcours des ruchers rétablissement icone recalcul pour calcul précis

--- a/src/main/resources/templates/rucher/rucherDetailGg.html
+++ b/src/main/resources/templates/rucher/rucherDetailGg.html
@@ -54,6 +54,8 @@
 				<span id="export-kml" class="bi bi-arrow-up-right-square" th:title="#{exportKML}"
 					aria-hidden="true"></span>
 				<a id="kml-download"></a>
+				<span id="parcours-redraw" class="bi bi-arrow-clockwise" th:title="#{parcoursRecalcul}"
+					aria-hidden="true"></span>
 				<span id="cercles" class="bi bi-wifi" aria-hidden="true"></span>
 			</div>
 		</div>
