--- a/src/main/resources/templates/rucher/rucherDetailOsm.html
+++ b/src/main/resources/templates/rucher/rucherDetailOsm.html
@@ -84,7 +84,10 @@
 				<a id="gpx-download"></a>	
 				<span id="export-kml" class="bi bi-arrow-up-right-square" th:title="#{exportKML}"
 					aria-hidden="true"></span>
-				<a id="kml-download"></a>						
+				<a id="kml-download"></a>				
+				<span id="parcours-redraw"
+					class="bi bi-arrow-clockwise" th:title="#{parcoursRecalcul}"
+					aria-hidden="true"></span>				
 				<span id="export-pdf" class="bi bi-file-pdf"
 					th:title="#{exportPdf}" aria-hidden="true"></span>
 				<form style="display:inline;" class="form">
