--- a/src/main/resources/templates/rucher/rucherDetailIgn.html
+++ b/src/main/resources/templates/rucher/rucherDetailIgn.html
@@ -78,6 +78,8 @@
 				<span id="export-kml" class="bi bi-arrow-up-right-square" th:title="#{exportKML}"
 					aria-hidden="true"></span>
 				<a id="kml-download"></a>
+				<span id="parcours-redraw" class="bi bi-arrow-clockwise" th:title="#{parcoursRecalcul}"
+					aria-hidden="true"></span>
 			</div>
 		</div>
 	</div>
