--- a/src/main/resources/templates/rucher/rucherDetail.html
+++ b/src/main/resources/templates/rucher/rucherDetail.html
@@ -106,7 +106,8 @@
 		</table>
 		<h6	th:unless="${#arrays.length(ruches)}" th:text="#{Pasderuche}"></h6>
 		<th:block th:if="${#arrays.length(ruches)}">
-			<h6	th:text="#{listeRuches}"></h6>
+			<h6	th:if="${nbHausses}" th:text="#{listeXRuches(${#arrays.length(ruches)})} + ' ' + #{nbXHausses(${nbHausses})}"></h6>
+			<h6	th:unless="${nbHausses}" th:text="#{listeXRuches(${#arrays.length(ruches)})}"></h6>
 			<table class="table table-sm table-bordered table-striped" id="ruches">
 				<thead>
 				<tr>
@@ -118,6 +119,7 @@
 					<th class="num" th:text="#{nbCadres}"></th>
 					<th style="background-color:PaleGoldenRod" class="num" th:text="#{nbCadresMax}"></th>
 					<th style="background-color:PaleGoldenRod" th:text="#{type}"></th>
+					<th th:text="#{Hausses}"></th>
 					<th th:text="#{commentaire}"></th>
 				</tr>
 				</thead>
@@ -131,6 +133,7 @@
 						<td class="num" th:text="${nbCadres[rucheStat.index]}"></td>
 						<td class="num" th:text="${ruche.type?.nbCadresMax}"></td>
 						<td th:text="${ruche.type?.nom}"></td>
+						<td class="num" th:text="${listNbHausses[rucheStat.index]}"></td>
 						<td th:text="${ruche.commentaire}"></td>
 					</tr>
 				</tbody>
