--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -15,7 +15,7 @@
 <link rel="stylesheet" type="text/css" media="all"
 	th:href="@{/css/ruches.css}" />
 <link rel="stylesheet" type="text/css" media="all"
-	th:href="@{/js/datatables-1.11.1/datatables.min.css}" />
+	th:href="@{/js/datatables-1.11.2/datatables.min.css}" />
 	
 <link rel="stylesheet" type="text/css" media="all"
 	th:href="@{/bootstrap-icons-1.5.0/bootstrap-icons.css}" />	
@@ -26,7 +26,7 @@
 <script th:src="@{/js/bootstrap-5.1.1-dist/js/bootstrap.bundle.min.js}"></script>
 <link rel="stylesheet" type="text/css" media="all"
 	th:href="@{/js/bootstrap-5.1.1-dist/css/bootstrap.min.css}" />
-<script th:src="@{/js/datatables-1.11.1/datatables.min.js}"></script>
+<script th:src="@{/js/datatables-1.11.2/datatables.min.js}"></script>
 <script th:inline="javascript">
 $().ready(function() {
   $('.confirmdeploie').on('click', function() {
@@ -44,7 +44,7 @@ if ((window.navigator.language == 'fr') || (window.navigator.language.indexOf('f
 $.extend( true, $.fn.dataTable.defaults, {
 	stateSave: true,
 	lengthMenu: [ [10, 25, 50, 100, -1], [10, 25, 50, 100, [[#{Tout}]] ] ],
-	pageLength: 25, // [[${@environment.getProperty('datatables.pageLength')}]],
+	pageLength: parseInt([[${@environment.getProperty('datatables.pageLength')}]]),
 });
 </script>
 <th:block th:replace="${scripts} ?: ~{}" />
