--- a/src/main/resources/templates/essaim/essaimCommentaireLotForm.html
+++ b/src/main/resources/templates/essaim/essaimCommentaireLotForm.html
@@ -33,7 +33,10 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col">
-				<h1 class="item" th:text="#{commentaireLotEssaim} + ' ' + ${essaimsNoms}"></h1>
+				<h1 class="item">
+					<a th:href="@{'/essaim/liste'}" th:text="#{Essaims}"></a>
+					<th:block th:text="' ' + #{commentaireLot} + ' ' + ${essaimsNoms}">
+				</h1>
 			</div>
 		</div>
 	</div>
