--- a/src/main/resources/templates/hausse/haussesListe.html
+++ b/src/main/resources/templates/hausse/haussesListe.html
@@ -36,7 +36,7 @@ $(document).ready(function() {
     table.on( 'select deselect', updateLinks);
     $('.selection').on('click', function () {
     	if ($(this).attr("href") == "#") {
-    		return confirm([[#{selecthaussestraiter}]]);	
+    		alert([[#{selecthaussestraiter}]]);	
     	}      
     });
     
