--- a/src/main/resources/templates/ruche/ruchesListe.html
+++ b/src/main/resources/templates/ruche/ruchesListe.html
@@ -33,7 +33,7 @@
 	    table.on( 'select deselect', updateLinks);
 	    $('.selection').on('click', function () {
 	    	if ($(this).attr("href") == "#") {
-	    		return confirm([[#{selectruchestraiter}]]);	
+	    		alert([[#{selectruchestraiter}]]);	
 	    	}      
 	    });
 	});
