Suppression comments. Amélioration retour form ajout/retrait hausses

--- a/src/main/resources/templates/ruche/rucheRetraitHausseForm.html
+++ b/src/main/resources/templates/ruche/rucheRetraitHausseForm.html
@@ -33,9 +33,16 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
+				<!-- 
 				<th:block th:text="#{retraithausseXXdela(${hausse.nom})}"></th:block>
 				  <a th:href="@{'/ruche/hausses/'+${ruche.id}}"
 					th:text="#{ruche} + ' ' + ${ruche.nom}"></a>
+				 -->
+				 
+				 <th:block th:text="#{hausseXX(${hausse.nom})}"></th:block>
+				  <a th:href="@{'/ruche/hausses/'+${ruche.id}}"
+					th:text="#{retraitDeLaruche(${ruche.nom})}"></a>
+				 	
 				</h1>
         	</div>
         </div>
