--- a/src/main/resources/templates/ruche/rucheHausseForm.html
+++ b/src/main/resources/templates/ruche/rucheHausseForm.html
@@ -29,9 +29,16 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
+				<!-- 
 				<th:block th:text="#{ajouthausseXXsur(${hausse.nom})}"></th:block>
 				  <a th:href="@{'/ruche/hausses/'+${ruche.id}}"
 					th:text="#{ruche} + ' ' + ${ruche.nom}"></a>
+				 -->
+				<th:block th:text="#{hausseXX(${hausse.nom})}"></th:block>
+				  <a th:href="@{'/ruche/hausses/'+${ruche.id}}"
+					th:text="#{ajoutSurLaruche(${ruche.nom})}"></a>
+				 
+				 	
 				</h1>
         	</div>
         </div>
