d3-7.0.1 -> d3-7.1.1 et jquery-ui-1.12.1 -> jquery-ui-1.13.0

--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -7,11 +7,11 @@
 	content="width=device-width, initial-scale=1">
 <link rel="icon" type="image/png" th:href="@{/images/ruchesicon.png}" />
 <link rel="stylesheet" type="text/css" media="all"
-	th:href="@{/js/jquery-ui-v1.12.1/jquery-ui.min.css}" />
+	th:href="@{/js/jquery-ui-1.13.0/jquery-ui.min.css}" />
 <link rel="stylesheet" type="text/css" media="all"
-	th:href="@{/js/jquery-ui-v1.12.1/jquery-ui.structure.min.css}" />
+	th:href="@{/js/jquery-ui-1.13.0/jquery-ui.structure.min.css}" />
 <link rel="stylesheet" type="text/css" media="all"
-	th:href="@{/js/jquery-ui-v1.12.1/jquery-ui.theme.min.css}" />
+	th:href="@{/js/jquery-ui-1.13.0/jquery-ui.theme.min.css}" />
 <link rel="stylesheet" type="text/css" media="all"
 	th:href="@{/css/ruches.css}" />
 <link rel="stylesheet" type="text/css" media="all"
@@ -21,7 +21,7 @@
 	th:href="@{/bootstrap-icons-1.6.0/bootstrap-icons.css}" />	
 	
 <script th:src="@{/js/jquery-3.6.0.min.js}"></script>
-<script th:src="@{/js/jquery-ui-v1.12.1/jquery-ui.min.js}"></script>
+<script th:src="@{/js/jquery-ui-1.13.0/jquery-ui.min.js}"></script>
 <script th:src="@{/js/jquery.validate.min-1.19.3.js}"></script>
 <script th:src="@{/js/bootstrap-5.1.2/js/bootstrap.bundle.min.js}"></script>
 <link rel="stylesheet" type="text/css" media="all"
@@ -52,7 +52,7 @@ $.extend( true, $.fn.dataTable.defaults, {
 <th:block th:replace="${links} ?: ~{}" />
 </head>
 
-<script th:fragment="d3" th:src="@{/js/d3.min-7.0.1.js}"></script>
+<script th:fragment="d3" th:src="@{/js/d3.min-7.1.1.js}"></script>
 <script th:fragment="d3-color" th:src="@{/js/d3-color.min-3.0.1.js}"></script>
 <script th:fragment="d3-interpolate" th:src="@{/js/d3-interpolate.min-3.0.1.js}"></script>
 <script th:fragment="d3-scale-chromatic" th:src="@{/js/d3-scale-chromatic.min-3.0.1.js}"></script>
