--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -69,7 +69,7 @@ $.extend( true, $.fn.dataTable.defaults, {
 	th:href="@{/js/GpPluginOpenLayers-3.1.0/GpPluginOpenLayers.css}" />
  	
 <script th:fragment="dom-to-image" th:src="@{/js/dom-to-image-more.min-2.8.0.js}"></script>
-<script th:fragment="jspdf" th:src="@{/js/jspdf.umd.min-2.3.1.js}"></script>
+<script th:fragment="jspdf" th:src="@{/js/jspdf-2.4.0.umd.min.js}"></script>
 <script th:fragment="jsdatepicker-fr" th:src="@{/js/datepicker-fr.js}"></script>
 
 <script th:fragment="jsChart" th:src="@{/js/chart.min-3.5.1.js}"></script>
