--- a/src/main/resources/templates/ruche/ruchesListePlusRucher.html
+++ b/src/main/resources/templates/ruche/ruchesListePlusRucher.html
@@ -45,11 +45,11 @@ $(document).ready(function() {
 					<th th:if="${session.voirInactif}" th:text="#{active}"></th>
 					<th th:text="#{dateAcquisition}"></th>
 					<th th:text="#{poidsVide}"></th>
+					<th th:text="#{PoidsTotal}"></th>
 					<th style="background-color:Tomato" th:text="#{nbCadres}"></th>
 					<th style="background-color:Tomato" th:text="#{nbCadresMax}"></th>
 					<th th:text="#{type}"></th>
 					<th style="background-color:PaleGoldenRod" th:text="#{Hausses}"></th>
-					<th style="background-color:PaleGoldenRod"></th>										
 					<th style="background-color:PaleGoldenRod" >Commentaire hausse</th>
 					<th:block th:if="${session.voirLatLon}">
 						<th style="background-color: LemonChiffon" th:text="#{latitude}"></th>
@@ -65,7 +65,10 @@ $(document).ready(function() {
 				</tr>
 			</thead>
 			<tbody th:with="f='dd/MM/yyyy'">
-				<tr th:with="e=${listeEvensCommentaireEsaim[rucheStat.index]}, eh=${evensHaussesRuches[rucheStat.index]}, ec=${listeEvenCadre[rucheStat.index]}"
+				<tr th:with="e=${listeEvensCommentaireEsaim[rucheStat.index]},
+						eh=${evensHaussesRuches[rucheStat.index]},
+						ec=${listeEvenCadre[rucheStat.index]},
+						ep=${evensPoidsRuches[rucheStat.index]}"
 					th:each="ruche : ${ruches}">
 					<td th:text="${ordreRuche[rucheStat.index]}"></td>
 					<td><a th:href="@{'/ruche/'+${ruche.id}}"
@@ -79,11 +82,11 @@ $(document).ready(function() {
 						th:text="${ruche.active}? #{oui} : #{non}"></td>
 					<td th:text="${ruche.dateAcquisition}"></td>
 					<td class="num" th:text="${#numbers.formatDecimal(ruche.poidsVide,1,1,'DEFAULT')}"></td>
+					<td class="num" th:text="${ep == null}?'':${#numbers.formatDecimal(ep.valeur,1,1,'DEFAULT')}+' '+${#temporals.format(ep.date, f)}+' '+${ep.commentaire}"></td>					
 					<td class="num" th:text="${ec == null}?'':${ec.valeur}+' '+${#temporals.format(ec.date, f)}+' '+${ec.commentaire}"></td>
 					<td class="num" th:text="${ruche.type?.nbCadresMax}"></td>
 					<td th:text="${ruche.type?.nom}"></td>
 					<td th:text="${hausseNoms[rucheStat.index]}"></td>
-					<td class="num" th:text="${nbHausses[rucheStat.index]}"></td>
 					<td th:text="${eh == null}?'':(${nbHausses[rucheStat.index]} &gt; 1 ? ${eh.hausse.nom} + '  ':'') + ${#temporals.format(eh.date, f)} + ' ' + ${eh.commentaire}"></td>
 					<th:block th:if="${session.voirLatLon}">
 						<td class="num" th:text="${#numbers.formatDecimal(ruche.latitude,1,5)}"></td>
