Carte des ruchers message "Pas de ruche" sur dbl click

--- a/src/main/resources/templates/rucher/ruchersListeGg.html
+++ b/src/main/resources/templates/rucher/ruchersListeGg.html
@@ -8,6 +8,7 @@
 	const urlruches = [[@{/}]];
 	const ruchertxt = [[#{rucher}]];
 	const lesRuchestxt = [[#{Ruches}]];
+	const pasderuchetxt = [[#{PasDeRuche}]];
 	const ruchersmapzoom = [[${@environment.getProperty('ruchers.map.zoom')}]]	
     const _csrf_token = [[${_csrf.token}]];
 </script>
