--- a/src/main/resources/templates/rucher/ruchersListeOsm.html
+++ b/src/main/resources/templates/rucher/ruchersListeOsm.html
@@ -10,6 +10,7 @@
 	const recentertxt = [[#{recentrer?}]];
 	const lesRucherstxt = [[#{Ruchers}]];
 	const lesRuchestxt = [[#{Ruches}]];
+	const pasderuchetxt = [[#{PasDeRuche}]];
 	const ruchertxt = [[#{rucher}]];
 	const couchemarqueursrucherstxt = [[#{couchemarqueursruchers}]];
 	const pleinecrantxt = [[#{pleinecran}]];
