--- a/src/main/resources/templates/rucher/ruchersListeOsm.html
+++ b/src/main/resources/templates/rucher/ruchersListeOsm.html
@@ -22,6 +22,11 @@
 </script>
 <script th:replace="include :: cssol"></script>
 <script th:replace="include :: cssGpPluginOpenLayers"></script>
+<style>
+	.ol-rotate {
+	    top: 4em;
+	}
+</style>
 </head>
 <body>
 	<nav th:replace="include :: navbar"></nav>
