spring boot 2.5.6 -> 2.5.7, rucherHisto2.html

--- a/src/main/resources/templates/rucher/rucherDetail.html
+++ b/src/main/resources/templates/rucher/rucherDetail.html
@@ -71,6 +71,12 @@
 				&nbsp;
 				<a th:href="@{'/rucher/historique/'+${rucher.id}}"
 				  class="bi bi-calendar-check" th:title="#{historique}" aria-hidden="true"></a>
+				
+				
+				<a th:href="@{'/rucher/historique2/'+${rucher.id}}"
+				  class="bi bi-calendar-check" th:title="#{historique}" aria-hidden="true"></a>
+				  
+				  
 			</div>
 		</div>
 	</div>
