--- a/src/main/resources/templates/rucher/rucherHisto2.html
+++ b/src/main/resources/templates/rucher/rucherHisto2.html
@@ -20,6 +20,7 @@
 				<tr>
 					<th th:text="#{date}"></th>
 					<th th:text="#{type}"></th>
+					<th th:text="'Dest/Prov'"></th>
 					<th th:text="#{ruche}"></th>
 					<th th:text="#{nb}"></th>
 					<th th:text="#{etat}"></th>
@@ -32,18 +33,12 @@
 							th:href="@{'/evenement/'+${eve.get('eveid')}}"></a>
 				</td>			
 				  <td th:text="${eve.get('type')}"></td>
+				  <td th:text="${eve.get('destProv')}"></td>
 				  <td th:text="${eve.get('ruche')}"></td>
 				  <td th:text="${eve.get('nbruches')}"></td>
 				  <td th:text="${eve.get('etat')}"></td>
 				</tr>
 		</table>
-	</div>
-	<div class="container-fluid">
-		<th:block th:if="${nomsActuel != null}">
-			<p th:text="'Attention l\'historique ne correspond pas à l\'état actuel'"></p>
-			<p th:text="'État actuel : ' + ${nomsActuel}"></p>
-			<p th:text="'Historique  : ' + ${nomsHisto}"></p>
-		</th:block>
 	</div>
 	<footer th:replace="include::footer"></footer>
 </body>
