--- a/src/main/resources/templates/rucher/rucherHisto2.html
+++ b/src/main/resources/templates/rucher/rucherHisto2.html
@@ -20,7 +20,7 @@
 				<tr>
 					<th th:text="#{date}"></th>
 					<th th:text="#{type}"></th>
-					<th th:text="'Dest/Prov'"></th>
+					<th th:text="#{destProv}"></th>
 					<th th:text="#{ruche}"></th>
 					<th th:text="#{nb}"></th>
 					<th th:text="#{etat}"></th>
