--- a/src/main/resources/templates/rucher/rucherRuchesAjoutForm.html
+++ b/src/main/resources/templates/rucher/rucherRuchesAjoutForm.html
@@ -4,8 +4,11 @@
 <script th:replace="include :: jsdatetimepicker"></script>
 <link th:replace="include :: cssdatetimepicker"/>
 <script th:replace="include :: localejsdatetimepicker"></script>
-<script>
+<script th:inline="javascript">
 	$().ready(function() {
+		$.validator.addMethod( "greaterThanEqual", function( value, element, param ) {
+		    return Date.parse(value) > Date.parse(param);
+		}, [[#{doitEtreSupA}]] + ' {0}');		
 		$("#evenementForm").validate({
 			errorClass: 'erreur-form',
 			errorPlacement: function(error, element) {
@@ -13,13 +16,18 @@
 			},
 			rules : {
 				date : {
-					required : true
+					required : true,
+					greaterThanEqual : [[${dateFirst}]] + ' ' + [[${timeFirst}]]
 				},
 				commentaire : {
 					maxlength : 255
 				}
 			}
 		});
+		$('#date').datetimepicker({
+			minDate: [[${dateFirst}]],
+			minTime: [[${timeFirst}]]
+			});  
 	});
 </script>
 </head>
@@ -36,6 +44,9 @@
 					th:text="#{ajoutruches} + ' ' + ${rucher.nom}"></a>
 				<th:block th:text="' ' + #{Ruches} + ' ' + ${ruchesNoms}"></th:block>
 				</h1>
+				<th:block th:text=
+		        	"#{dateDernierAjout} + ' ' + ${#temporals.format(dateTime, 'dd/MM/yyyy HH:mm')}"
+		        </th:block>
         	</div>
         </div>
     </div>
