--- a/src/main/resources/templates/essaim/essaimAssociationForm.html
+++ b/src/main/resources/templates/essaim/essaimAssociationForm.html
@@ -4,8 +4,13 @@
 <script th:replace="include :: jsdatetimepicker"></script>
 <link th:replace="include :: cssdatetimepicker"/>
 <script th:replace="include :: localejsdatetimepicker"></script>
-<script>
+<script th:inline="javascript">
 	$().ready(function() {
+		$.validator.addMethod( "greaterThanEqual", function( value, element, param ) {
+			return ($('#swapPositions').is(":checked") &&
+				([[${ruche.rucher?.id}]] != [[${rucheSource.rucher?.id}]]))
+			? (Date.parse(value) > Date.parse(param)) : true;
+		}, [[#{doitEtreSupA}]] + ' {0}');
 		$("#evenementForm").validate({
 			errorClass: 'erreur-form',
 			errorPlacement: function(error, element) {
@@ -13,13 +18,30 @@
 			},
 			rules : {
 				date : {
-					required : true
+					required : true,
+					greaterThanEqual : [[${dateFirst}]] + ' ' + [[${timeFirst}]]
 				},
 				commentaire : {
 					maxlength : 255
 				}
 			}
 		});
+		$('#date').datetimepicker({
+			minDate: false,
+			minTime: false
+		});
+		function swapChange() {
+			const isChk =  $('#swapPositions').is(":checked") &&
+				([[${ruche.rucher?.id}]] != [[${rucheSource.rucher?.id}]]);
+			
+			alert(isChk);
+			
+			$('#date').datetimepicker({
+				minDate: isChk ? [[${dateFirst}]] : false,
+				minTime: isChk ? [[${timeFirst}]] : false
+			});
+		}
+		$('#swapPositions').on('change', swapChange);
 	});
 </script>
 </head>
