--- a/src/main/resources/templates/rucher/rucherHisto2.html
+++ b/src/main/resources/templates/rucher/rucherHisto2.html
@@ -47,8 +47,8 @@
 					<th th:text="#{type}"></th>
 					<th th:text="#{destProv}"></th>
 					<th th:text="#{ruche}"></th>
-					<th th:text="#{nb}"></th>
-					<th th:text="#{etat}"></th>
+					<th style="background-color:PaleGoldenRod" th:text="#{nb}"></th>
+					<th style="background-color:PaleGoldenRod" th:text="#{etat}"></th>
 				</tr>
 			</thead>
 			<tbody>
