--- a/src/main/resources/templates/rucher/rucherDetail.html
+++ b/src/main/resources/templates/rucher/rucherDetail.html
@@ -67,7 +67,7 @@
 				<a th:href="@{'/evenement/rucher/commentaire/'+${rucher.id}}"
 				  class="bi bi-chat-text" th:title="#{evenementCommentaire}" aria-hidden="true"></a>  
 				&nbsp;
-				<a th:href="@{'/rucher/historique/'+${rucher.id}+'/1'}"
+				<a th:href="@{'/rucher/historique/'+${rucher.id}+'/true'}"
 				  class="bi bi-calendar-check" th:title="#{historique}" aria-hidden="true"></a>
 			</div>
 		</div>
